--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-tilt": "^1.0.2",
+    "react-typical": "^0.1.3",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-typical": "^0.1.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
